# rqa

./: .gitmodules  LICENSE  MANIFEST.in  README.md  RQA_Tutorial.ipynb  Widget.ipynb  __init__.py  _plotting.py  _timeseries.py  _utils.py  _widgets.py  characteristic_rqa.py  combine_timeseries.py  config.py  generate_rps.py  pyproject.toml  rqa.py  setup.cfg  setup.py  timeseries.py  utils.py  widget.py  widgets.py
data/: standard.mplstyle
data/example_rps/: brownian_rp.npy  logistic_map_rp.npy  sine_rp.npy
data/example_timeseries/: cosine_ts.npy  white_noise_ts.npy
example_rps/: super_sine_rp.npy  white_noise_rp.npy
example_timeseries/: logistic_map_ts.npy
notebooks/: 1ES.ipynb  1ES_DHO.ipynb  1ES_RN_measures.ipynb  1ES_plots.ipynb  clustering.ipynb  embedding.ipynb  network_graphs.ipynb  pyrqa.ipynb  surrogates.ipynb  timeseries.ipynb  visibility_graph.ipynb
rqa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: __init__.py
src/rqa/: __init__.py  characteristic_rqa.py  clustering.py  combine_timeseries.py  config.py  embedding.py  generate_rps.py  networks.py  rqa_utils.py  significance.py  statistics.py  surrogates.py  utils.py  wrqa.py
src/rqa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rqa/data/: characteristic_systems_rqa_exclude_theiler.csv
src/rqa/data/example_rps/: brownian_rp.npy  logistic_map_rp.npy
src/rqa/data/example_timeseries/: brownian_ts.npy  sine_ts.npy
src/rqa/rqa.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/rqa/timeseries/: timeseries.py
src/rqa/utils/: utils.py
timeseries/: __init__.py
utils/: __init__.py  utils.py
