[build-system]
requires = [
"setuptools>=46",
"wheel",
"scipy==1.11.2", "ipywidgets", "pillow", "wheel", "numba==0.58.0",
                       "plotly", "bqplot", "matplotlib",
                       "setuptools>=65","Cython>=3.0.0","numpy==1.24.0",
                       "pyunicorn @ git+https://github.com/pik-copan/pyunicorn.git#egg=pyunicorn"
]
build-backend = "setuptools.build_meta"